--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-typescript": "^7.24.1",
     "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.1",
     "nodemon": "^3.1.0",
     "npm-run-all": "^4.1.5",
+    "style-loader": "^4.0.0",
     "typescript": "^5.4.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
